feat : BFS 알고리즘 풀이 추가

--- a/Algorithm/algorithm_1day.ipynb
+++ b/Algorithm/algorithm_1day.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 원리\n",
+    "### 설명\n",
     "첫번쨰 데이터 = pivot 데이터 - 기준점  \n",
     "(왼쪽)pivot 데이터 보다 큰 데이터를 선택  \n",
     "(오른쪽)pivot 데이터 보다 작은 데이터를 선택  "
@@ -257,22 +257,22 @@
    "source": [
     "# 정렬 알고리즘 비교하기\n",
     "알고리즘   평균 시간 복잡도  공간 복잡도   \n",
-    "선택정렬 :  O(N2)    O(N)        아이디어가 매우 간단  \n",
-    "삽입정렬 :  O(N2)    O(N)        데이터가 거의 정렬되어 있을 때는 가장 빠르다  \n",
-    "퀵 정렬  :  O(NlogN)  O(N)       대부분의 경우에 가장 적합하여 충분히 빠르다  \n",
-    "계수 정렬  : O(N+k)   O(N+k)     데이터의 크기가 한정되어 있는 경우에만 사용이 가능하지만 매우 빠르게 동작  "
+    "- 선택정렬 :  O(N2)    O(N)        아이디어가 매우 간단  \n",
+    "- 삽입정렬 :  O(N2)    O(N)        데이터가 거의 정렬되어 있을 때는 가장 빠르다  \n",
+    "- 퀵 정렬  :  O(NlogN)  O(N)       대부분의 경우에 가장 적합하여 충분히 빠르다  \n",
+    "- 계수 정렬  : O(N+k)   O(N+k)     데이터의 크기가 한정되어 있는 경우에만 사용이 가능하지만 매우 빠르게 동작  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [문제] 두 배열 원소 교체: 문제 해결 아이디어\n",
+    "### [문제] 두 배열 원소 교체: 문제 해결 아이디어\n",
     "계획\n",
     "- (핵심) 매번 배열 A에서 가장 작은 원소를 골라서 배열 B에서 가장 큰 원소와 교체한다.\n",
     "- 정렬 알고리즘 활용\n",
-    "1. 가장 먼저 A 오름차순, B 내림차순\n",
-    "2. 첫번째 인덱스부터 차례로 확인하며 A의 원소가 B의 원소보다 작을 때 교체 진행\n"
+    "    1. 가장 먼저 A 오름차순, B 내림차순\n",
+    "    2. 첫번째 인덱스부터 차례로 확인하며 A의 원소가 B의 원소보다 작을 때 교체 진행\n"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DFS (Depth-First Search)\n",
+    "# DFS (Depth-First Search)\n",
     "- 깊이 우선 탐색\n",
     "- 깊은 부분을 우선적으로 탐색하는 알고리즘\n",
     "1. 탐색 시작 노드를 스택에 삽입하고 방문 처리\n",
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BFS (Breath-First Search)\n",
+    "# BFS (Breath-First Search)\n",
     "- 너비 우선 탐색\n",
     "- 그래프에서 가까운 노드부터 우선적으로 탐색하는 알고리즘\n",
     "- **큐 자료구조** 활용\n",
@@ -363,7 +363,7 @@
     "2. 큐에서 노드를 꺼낸 뒤에 해당 노드의 인접노드 중에서 방문하지 않은 노드를 **모두 큐에 삽입하고 방문처리**\n",
     "3. 더 이상 2번의 과정을 수행 할 수 없을 때까지 반복합니다.  \n",
     "    **대기업 코딩테스트 자주 출제**\n",
-    "- 특정조건에서의 최단경로 문제 해결하기 위한 목적으로  "
+    "### <u>**특정조건에서의 최단경로 문제 해결하기 위한 목적으로</u>**  "
    ]
   },
   {
@@ -421,11 +421,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [문제] 음료수 얼려 먹기\n",
+    "## **[BFS 알고리즘 문제1]**\n",
+    "### [문제] 한번에 만들수 있는 아이스크림의 개수는? \n",
     "- 첫번째 줄에 얼음 틀의 세로 길이 N과 가로 길이 M이 주어진다.  \n",
     "- 두번째 줄부터 N+1번째 줄까지 얼음 틀의 형태가 주어진다.  \n",
-    "- 이때 구멍이 뚫려있는 부분은 0, 그렇지 않은 부분은 1입니다.  \n",
-    "**문제** 한번에 만들수 있는 아이스크림의 개수는? "
+    "- 이때 구멍이 뚫려있는 부분은 0, 그렇지 않은 부분은 1입니다.  "
    ]
   },
   {
@@ -454,7 +454,7 @@
     "\n",
     "# 2차원 리스트의 맵 정보 입력 받기\n",
     "graph=[]\n",
-    "for i in range[n]:\n",
+    "for i in range(n):\n",
     "    graph.append(list(map(int,input())))\n",
     "\n",
     "# 모든 노드에 대하여 음료수 채우기\n",
@@ -469,11 +469,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **[BFS 알고리즘 문제2]**\n",
+    "### [문제] 탈출하기 위해 움직여야 하는 최소 칸의 개수를 구하시오( 칸을 셀 떄는 시작칸과 마지막칸 모두 포함하여 계산)\n",
+    "- N*M 크기의 직사각형 미로에 갇혔다. 괴물을 피해야한다.  \n",
+    "- 위치는 (1,1)이며 한번에 한칸씩 이동 가능  \n",
+    "- 괴물이 있는 부분 0 괴물이 없는 부분 1  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# BFS 소스 코드 구현\n",
+    "def bfs(x,y):\n",
+    "    # 큐 구현을 위해 deque 라이브러리 사용\n",
+    "    queue=deque()\n",
+    "    queue.append((x,y))\n",
+    "    # 큐가 빌 때까지 반복하기\n",
+    "    while queue:\n",
+    "        x,y = queue.popleft()\n",
+    "        # 현재 위치에서 4가지 방향으로의 위치 확인\n",
+    "        for i in range(4):\n",
+    "            nx=x+dx[i]\n",
+    "            ny=y+dy[i]\n",
+    "            # 미로 찾기 공간을 벗어난 경우 무시\n",
+    "            if nx < 0 or nx>=n or ny<0 or ny>=m:\n",
+    "                continue\n",
+    "            # 벽인 경우 무시\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            # 해당 노드를 처음 방문하는 경우에만 최단 거리 기록\n",
+    "            if graph[nx][ny] ==1:\n",
+    "                graph[nx][ny] = graph[x][y] +1\n",
+    "                queue.append((nx,ny))\n",
+    "    # 가장 오른쪽 아래까지의 최단 거리 변환\n",
+    "    return graph[n-1][m-1]\n",
+    "\n",
+    "\n",
+    "# N,M을 공백을 기준으로 구분하여 입력 받기\n",
+    "n,m = map(int,input().split())\n",
+    "\n",
+    "# 2차원 리스트의 맵 정보 입력 받기\n",
+    "graph=[]\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int,input())))\n",
+    "dx=[-1,1,0,0]\n",
+    "dy=[0,0,-1,1]\n",
+    "\n",
+    "print(bfs(0,0))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 알게된 방식\n",
+    "map(function, iterable)\n",
+    "\n",
+    "- 첫 번째 매개변수로는 함수\n",
+    "- 두 번째 매개변수로는 반복 가능한 자료형(리스트, 튜플 등)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t =map(int, ['1', '2', '3', 4.5, 5.8]) # 1, 2, 3, 4, 5 순환 가능 객체로 변환\n",
+    "\n",
+    "list(map(int, ['1', '2', '3', 4.5, 5.8])) # [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph : [2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist=[1,2,3,4,5]\n",
+    "def add_one(n):\n",
+    "    return n+1\n",
+    "\n",
+    "graph=list(map(add_one,mylist))\n",
+    "print(f'graph : {graph}')"
+   ]
   },
   {
    "cell_type": "code",
